[package]
name = "websockets-chat-async-std-futures"
version = "0.1.0"
edition = "2021"

[dependencies]
websockets = { path = "../websockets" }
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.30"
bytes = "1.6.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
